--- a/view/settings/edit-profile.ejs
+++ b/view/settings/edit-profile.ejs
@@ -25,7 +25,7 @@
                   <label for="username" class="block text-sm font-medium text-gray-700 required:text-red-500"> Username <span class="text-red-600">*</span></label>
                   <div class="mt-1 flex rounded-md shadow-sm">
                     <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-500 sm:text-sm"><%=locals.domain%>/</span>
-                    <input type="text" name="username" id="username" autocomplete="username" class="block w-full min-w-0 flex-grow rounded-none rounded-r-md border-gray-300 focus:border-sky-500 focus:ring-sky-500 sm:text-sm" value="<%= profile.username %>" />
+                    <input type="text" name="username" id="username" autocomplete="username" class="block w-full min-w-0 flex-grow rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="<%= profile.username %>" />
                   </div>
                 </div>
               </div>
@@ -34,46 +34,46 @@
             <div class="mt-6 grid grid-cols-12 gap-6">
               <div class="col-span-12 sm:col-span-6">
                 <label for="first-name" class="block text-sm font-medium text-gray-700">First name <span class="text-red-600">*</span></label>
-                <input type="text" name="firstName" value="<%= profile.firstName %>" id="first-name" autocomplete="given-name" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="firstName" value="<%= profile.firstName %>" id="first-name" autocomplete="given-name" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="last-name" class="block text-sm font-medium text-gray-700">Last name <span class="text-red-600">*</span></label>
-                <input type="text" name="lastName" value="<%= profile.lastName %>" id="last-name" autocomplete="family-name" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="lastName" value="<%= profile.lastName %>" id="last-name" autocomplete="family-name" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12">
                 <label for="year" class="block text-sm font-medium text-gray-700"> What year did you graduated OR will graduate GSS Gwarinpa? <span class="text-red-600">*</span></label>
-                <input type="text" name="year" value="<%= profile.year %>" id="year" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="year" value="<%= profile.year %>" id="year" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12">
                 <label for="nickname" class="block text-sm font-medium text-gray-700">What is/was your nickname in school?</label>
-                <input type="text" name="nickname" value="<%= profile.nickname %>" id="nickname" autocomplete="nickname" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="nickname" value="<%= profile.nickname %>" id="nickname" autocomplete="nickname" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="phone" class="block text-sm font-medium text-gray-700"> What is your phone number?</label>
-                <input type="text" name="phone" value="<%= profile.phone %>" id="phone" autocomplete="tel" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="phone" value="<%= profile.phone %>" id="phone" autocomplete="tel" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="residence" class="block text-sm font-medium text-gray-700"> Where do you currently live?</label>
-                <input type="text" name="residence" value="<%= profile.residence %>" id="residence" autocomplete="address-line3" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="residence" value="<%= profile.residence %>" id="residence" autocomplete="address-line3" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12">
                 <label for="occupation" class="block text-sm font-medium text-gray-700"> What is your occupation?</label>
-                <input type="text" name="occupation" value="<%= profile.occupation %>" id="occupation" autocomplete="work" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="occupation" value="<%= profile.occupation %>" id="occupation" autocomplete="work" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="class" class="block text-sm font-medium text-gray-700">What is/was your class in school?</label>
-                <input type="text" name="class" value="<%= profile.class %>" id="class" autocomplete="class" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="class" value="<%= profile.class %>" id="class" autocomplete="class" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
               <div class="col-span-12 sm:col-span-6">
                 <label for="teacher" class="block text-sm font-medium text-gray-700"> Your favorite teacher is/was?</label>
-                <input type="text" name="teacher" value="<%= profile.teacher %>" id="teacher" autocomplete="teacher" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="teacher" value="<%= profile.teacher %>" id="teacher" autocomplete="teacher" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
@@ -95,7 +95,7 @@
               </div>
               <div class="col-span-12 sm:col-span-6">
                 <label for="day" class="block text-sm font-medium text-gray-700">Day of Birth</label>
-                <input type="text" name="day" value="<%= profile.day %>" id="day" autocomplete="bday-day" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="text" name="day" value="<%= profile.day %>" id="day" autocomplete="bday-day" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12">
@@ -117,37 +117,37 @@
               <div class="col-span-12 sm:col-span-6">
                 <label for="social_type_1" class="block text-sm font-medium text-gray-700"> Select Social media type #1</label>
                 <select id="social_type_1" name="social_type_1" class="mt-1 block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
-                  <option value="Twitter" selected="<%= profile.social_type_1 === 'Twitter' %>">Twitter</option>
-                  <option value="Instagram" selected="<%= profile.social_type_1 === 'Instagram' %>">Instagram</option>
-                  <option value="WhatsApp" selected="<%= profile.social_type_1 === 'WhatsApp' %>">WhatsApp</option>
-                  <option value="Facebook" selected="<%= profile.social_type_1 === 'Facebook' %>">Facebook</option>
+                  <option value="Twitter" <%= profile.social_type_1 === 'Twitter' ? 'selected' : '' %> >Twitter</option>
+                  <option value="Instagram" <%= profile.social_type_1 === 'Instagram' ? 'selected' : '' %> >Instagram</option>
+                  <option value="WhatsApp" <%= profile.social_type_1 === 'WhatsApp' ? 'selected' : '' %> >WhatsApp</option>
+                  <option value="Facebook" <%= profile.social_type_1 === 'Facebook' ? 'selected' : '' %> >Facebook</option>
                 </select>
               </div>
               <div class="col-span-12 sm:col-span-6">
                 <label for="link_social_type_1" class="block text-sm font-medium text-gray-700"> Link to social media #1 </label>
-                <input type="url" name="link_social_type_1" value="<%= profile.link_social_type_1 %>" id="link_social_type_1" autocomplete="url" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="url" name="link_social_type_1" value="<%= profile.link_social_type_1 %>" id="link_social_type_1" autocomplete="url" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
 
               <div class="col-span-12 sm:col-span-6">
                 <label for="social_type_2" class="block text-sm font-medium text-gray-700"> Select Social media type #2</label>
                 <select id="social_type_2" name="social_type_2" class="mt-1 block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm">
-                  <option value="Twitter" selected="<%= profile.social_type_2 === 'Twitter' %>">Twitter</option>
-                  <option value="Instagram" selected="<%= profile.social_type_2 === 'Instagram' %>">Instagram</option>
-                  <option value="WhatsApp" selected="<%= profile.social_type_2 === 'WhatsApp' %>">WhatsApp</option>
-                  <option value="Facebook" selected="<%= profile.social_type_2 === 'Facebook' %>">Facebook</option>
+                  <option value="Twitter" <%= profile.social_type_2 === 'Twitter' ? 'selected' : '' %> >Twitter</option>
+                  <option value="Instagram" <%= profile.social_type_2 === 'Instagram' ? 'selected' : '' %> >Instagram</option>
+                  <option value="WhatsApp" <%= profile.social_type_2 === 'WhatsApp' ? 'selected' : '' %> >WhatsApp</option>
+                  <option value="Facebook" <%= profile.social_type_2 === 'Facebook' ? 'selected' : '' %> >Facebook</option>
                 </select>
               </div>
               <div class="col-span-12 sm:col-span-6">
                 <label for="link_social_type_2" class="block text-sm font-medium text-gray-700"> Link to social media #1 </label>
-                <input type="url" name="link_social_type_2" value="<%= profile.link_social_type_2 %>" id="link_social_type_2" autocomplete="url" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-sky-500 focus:outline-none focus:ring-sky-500 sm:text-sm" />
+                <input type="url" name="link_social_type_2" value="<%= profile.link_social_type_2 %>" id="link_social_type_2" autocomplete="url" class="mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" />
               </div>
             </div>
           </div>
-
+          
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
-              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Cancel</a>
-              <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-sky-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-sky-800 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-offset-2">Save</button>
+              <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Cancel</a>
+              <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-800 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Save</button>
             </div>
           </div>
         </form>
