--- a/view/settings/change-profile-photo.ejs
+++ b/view/settings/change-profile-photo.ejs
@@ -25,7 +25,11 @@
                 <div class="mt-1 lg:hidden">
                   <div class="flex items-center">
                     <div class="inline-block h-12 w-12 flex-shrink-0 overflow-hidden rounded-full" aria-hidden="true">
-                      <img class="h-full w-full rounded-full" src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=320&h=320&q=80" alt="" />
+                      <% if(profile.google_id){ %>
+                      <img loading="lazy" src="<%= profile.google_photo %>" class="h-full w-full rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                      <% } else { %>
+                      <img loading="lazy" src="<%= profile.photo %>" class="h-full w-full rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                      <%}%>
                     </div>
                     <div class="ml-5 rounded-md shadow-sm">
                       <div class="group relative flex items-center justify-center rounded-md border border-gray-300 py-2 px-3 focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:bg-gray-50">
@@ -40,7 +44,11 @@
                 </div>
 
                 <div class="relative hidden overflow-hidden rounded-full lg:block">
-                  <img class="relative h-40 w-40 rounded-full" src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=4&w=320&h=320&q=80" alt="" />
+                  <% if(profile.google_id){ %>
+                  <img loading="lazy" src="<%= profile.google_photo %>" class="relative h-40 w-40 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <% } else { %>
+                  <img loading="lazy" src="<%= profile.photo %>" class="relative h-40 w-40 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <%}%>
                   <label for="desktop-user-photo" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
                     <span>Change</span>
                     <span class="sr-only"> user photo</span>
