--- a/view/settings/change-profile-photo.ejs
+++ b/view/settings/change-profile-photo.ejs
@@ -10,7 +10,7 @@
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
         <%- include('../includes/settingsNav') %>
 
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="#" method="POST" enctype="multipart/form-data">
+        <form id="change-profile-photo-form" class="divide-y divide-gray-200 lg:col-span-9" action="#" method="POST" enctype="multipart/form-data">
           <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
 
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
@@ -22,7 +22,7 @@
             <div class="mt-6 flex flex-col lg:flex-row">
               <div class="mt-6 flex-grow lg:mt-0 lg:ml-6 lg:flex-shrink-0 lg:flex-grow-0">
                 <p class="text-sm font-medium text-gray-700" aria-hidden="true">Photo</p>
-                <div class="mt-1 lg:hidden">
+                <div id="mobile-container" class="mt-1 lg:hidden">
                   <div class="flex items-center">
                     <div class="inline-block h-12 w-12 flex-shrink-0 overflow-hidden rounded-full" aria-hidden="true">
                       <% if(profile.google_id){ %>
@@ -43,7 +43,7 @@
                   </div>
                 </div>
 
-                <div class="relative hidden overflow-hidden rounded-full lg:block">
+                <div id="desktop-container" class="relative hidden overflow-hidden rounded-full lg:block">
                   <% if(profile.google_id){ %>
                   <img loading="lazy" src="<%= profile.google_photo %>" class="relative h-40 w-40 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
                   <% } else { %>
