--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -120,7 +120,7 @@
                 </div>
                 <%}%>
 
-                 <!-- SOCIAL MEDIA #2 -->
+                <!-- SOCIAL MEDIA #2 -->
                 <% if(profile.social_type_1){%>
                 <div class="sm:col-span-2">
                   <dt class="text-sm font-medium text-gray-500"><%= profile.social_type_2 %></dt>
@@ -146,11 +146,7 @@
                     <% profileOwnerComment = comment.visitorUsername === profile.username %>
                     <div class="flex space-x-3">
                       <p class="flex-shrink-0">
-                        <% if(comment.google_id){ %>
                         <img loading="lazy" src="<%= comment.photo %>" class="overflow-hidden bg-gradient-to-r <%= profileOwnerComment ? 'from-indigo-500 via-purple-500 to-pink-500' : 'from-green-300 via-green-700 to-green-300' %> w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
-                        <% } else { %>
-                        <img loading="lazy" src="<%=locals.images_folder+comment.userId%>" class="overflow-hidden bg-gradient-to-r <%= profileOwnerComment ? 'from-indigo-500 via-purple-500 to-pink-500' : 'from-green-300 via-green-700 to-green-300' %> w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
-                        <%}%>
                       </p>
 
                       <div>
@@ -197,12 +193,7 @@
             <div class="bg-gray-50 px-4 py-6 sm:px-6">
               <div class="flex space-x-3">
                 <div class="flex-shrink-0">
-                  <!--  -->
-                  <% if(profile.google_id){ %>
-                  <img loading="lazy" src="<%= profile.google_photo %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
-                  <% } else { %>
-                  <img loading="lazy" src="<%=locals.images_folder+user._id%>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
-                  <%}%>
+                  <img loading="lazy" src="<%= user.photo %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
                 </div>
 
                 <div class="min-w-0 flex-1">
