--- a/view/includes/profile.ejs
+++ b/view/includes/profile.ejs
@@ -1,6 +1,6 @@
 <li>
   <a href="/contacts/<%= profile.username %>" class="space-y-6 overflow-hidden rounded-full block">
-    <img loading="lazy" class="object-contain mx-auto rounded-full h-56 w-56 bg-primary-700" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" alt="<%= profile.firstName.substring(0,1) %>" />
+    <img loading="lazy" class="object-contain mx-auto rounded-full bg-white h-56 w-56 border border-red-300" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" alt="<%= profile.firstName.substring(0,1) %>" />
 
     <div class="space-y-2">
       <div class="space-y-1 text-lg font-medium leading-6">
