--- a/view/settings/change-profile-photo.ejs
+++ b/view/settings/change-profile-photo.ejs
@@ -25,7 +25,7 @@
                 <div id="mobile-container" class="mt-1 lg:hidden">
                   <div class="flex items-center">
                     <div class="inline-block h-12 w-12 flex-shrink-0 overflow-hidden rounded-full" aria-hidden="true">
-                      <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" class="h-full w-full rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                      <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" class="h-full w-full rounded-full border border-gray-400" alt="<%= profile.firstName.substring(0,1) %>" />
                     </div>
                     <div class="ml-5 rounded-md shadow-sm">
                       <div class="group relative flex items-center justify-center rounded-md border border-gray-300 py-2 px-3 focus-within:ring-2 focus-within:ring-secondary-500 focus-within:ring-offset-2 hover:bg-gray-50">
@@ -40,7 +40,7 @@
                 </div>
 
                 <div id="desktop-container" class="relative hidden overflow-hidden rounded-full lg:block">
-                  <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" class="relative h-40 w-40 rounded-full from-secondary-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" class="relative h-40 w-40 rounded-full border border-gray-400" alt="<%= profile.firstName.substring(0,1) %>" />
 
                   <label for="desktop-user-photo" class="absolute inset-0 flex h-full w-full items-center justify-center bg-black bg-opacity-75 text-sm font-medium text-white opacity-0 focus-within:opacity-100 hover:opacity-100">
                     <span>Change</span>
