--- a/view/error.ejs
+++ b/view/error.ejs
@@ -5,13 +5,9 @@
   <main class="mx-auto flex w-full max-w-7xl bg-white flex-grow flex-col justify-center px-4 sm:px-6 lg:px-8">
     <div class="py-16">
       <div class="text-center">
-        <p class="text-base font-semibold text-primary-700">Error</p>
-        <h1 class="mt-2 mb-5 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Error(s) were found</h1>
+        <h1 class="mt-2 mb-5 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">An error was found:</h1>
 
-        <!-- ERROR FLASH MESSAGE -->
-        <%- include('includes/flash') %>
-        <!-- ERROR FLASH MESSAGE END-->
-        <p class="mt-5 text-base text-gray-600">Sorry, please try again.</p>
+        <p class="text-red-500"><%= status %>: <%= errorMsg %></p>
         <div class="mt-6">
           <a href="/" class="text-base font-medium text-primary-700 hover:text-primary-500">
             Go back home
