--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -35,7 +35,7 @@
         <p class="text-lg font-semibold text-primary-700">Contacts</p>
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Recently added contacts</h2>
       </div>
-      <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-3 sm:gap-16 sm:space-y-0 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
+      <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-2 sm:gap-16 sm:space-y-0 md:grid-cols-3 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
         <% if(contacts.length){ %>
         <!--  -->
         <% contacts.forEach(contact => { %>
