--- a/views/settings/delete-account.ejs
+++ b/views/settings/delete-account.ejs
@@ -10,8 +10,9 @@
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
         <%- include('../includes/settingsNav') %> 
       
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= user.username %>/delete-account" method="POST">
+        <form id="delete-account-form" class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= user.username %>/delete-account" method="POST">
           <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
+          <input type="hidden" name="account_username" value="<%= user.username %>">
 
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
             <div>
@@ -24,7 +25,7 @@
           <div class="divide-y divide-gray-200 pt-6">
             <div class="mt-4 flex justify-end py-4 px-4 sm:px-6">
               <a href="/contacts/<%= user.username %>" class="inline-flex justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Cancel</a>
-              <button type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-red-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-800 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Yes, Delete Account</button>
+              <button id="delete-account" type="submit" class="ml-5 inline-flex justify-center rounded-md border border-transparent bg-red-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-800 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2">Yes, Delete Account</button>
             </div>
           </div>
         </form>
