--- a/views/includes/profile.ejs
+++ b/views/includes/profile.ejs
@@ -5,7 +5,7 @@
   <!--  -->
   <li class="flex justify-center">
     <div>
-      <a href="/contacts/<%= profile.username %>" class="space-y-6 overflow-hidden h-56 w-56 block rounded-full">
+      <a href="/contacts/<%= profile.username %>" class="space-y-6 overflow-hidden h-56 w-56 block bg-white rounded-full">
         <img loading="lazy" class="object-contain mx-auto rounded-full h-56 w-56" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `data:image/svg+xml;utf8,${encodeURIComponent(new TextAvatar(profile.firstName).toString())}`) %>" alt="<%= profile.firstName.substring(0,1) %>" />
       </a>
 
